crates/postgres-subsystem/postgres-core-builder/src/access/snapshots/postgres_core_builder__access__precheck_builder__tests__many_to_one_predicate.snap
---
source: crates/postgres-subsystem/postgres-core-builder/src/access/precheck_builder.rs
expression: predicate
---
RelationalOp:
  Eq:
    - Path:
        - column_path:
            - Relation:
                column_pairs:
                  - self_column_id:
                      table_id:
                        index: 0
                        generation: ~
                      column_index: 2
                    foreign_column_id:
                      table_id:
                        index: 1
                        generation: ~
                      column_index: 0
                self_table_id:
                  index: 0
                  generation: ~
                linked_table_id:
                  index: 1
                  generation: ~
                linked_table_alias: assignees
                _phantom: ~
            - Leaf:
                table_id:
                  index: 1
                  generation: ~
                column_index: 2
          field_path:
            Pk:
              lead:
                - assignee
              pk_fields:
                - id
        - ~
    - Common:
        StringLiteral: developer
